# ccinfra

./: .gitignore  CMakeLists.txt  README.md  ToDoList.md
doc/: ccinfra.md
include/ccinfra/: ccinfra.h
include/ccinfra/algo/: String.h  bits.h  bound.h  foreach.h  loop.h  max_min.h  range.h  search.h
include/ccinfra/base/: Algorithm.h  Assertions.h  BaseTypes.h  Default.h  EqHelper.h  Keywords.h  NullPtr.h  ScopeExit.h  SourceFile.h  Status.h  String.h  Uncloneable.h
include/ccinfra/concurrency/: Executor.h  MultiThreadWrapper.h  Synchronization.h
src/algo/: String.cpp
src/base/: Args.cpp
src/concurrency/: Executor.cpp
src/log/: ConsoleState.cpp  log.cpp
src/mem/: MsgAllocator.cpp  SharedObject.cpp
src/memory/: MsgAllocator.cpp  SharedObject.cpp
src/option/: OptionsDescription.cpp
src/options/: Args.cpp  Cmdline.cpp  Option.cpp  OptionsDescription.cpp  VariablesMap.cpp
src/sched/: Executor.cpp
src/utils/: SourceFile.cpp  TypeName.cpp
test/: CMakeLists.txt  TestAlgorithm.cpp  TestArray.cpp  TestAutoMsg.cpp  TestBits.cpp  TestBound.cpp  TestEqHelper.cpp  TestExecutor.cpp  TestGofState.cpp  TestHasRole.cpp  TestHashMap.cpp  TestKeywords.cpp  TestLinkedAllocator.cpp  TestList.cpp  TestMaybe.cpp  TestMultiThreadWrapper.cpp  TestObjAllocator.cpp  TestObjectAllocator.cpp  TestOption.cpp  TestPlacement.cpp  TestPlainTransData.cpp  TestRingNumber.cpp  TestRole.cpp  TestSearch.cpp  TestSmartPtr.cpp  TestStructObject.cpp  TestStructWrapper.cpp  TestThreadData.cpp  TestTransData.cpp  TestUnknown.cpp  TestUnknownCast.cpp  main.cpp
(+80 files in other folders)
